Fixed create project FAB position on smaller screens.

--- a/angular/components/projects/projects.scss
+++ b/angular/components/projects/projects.scss
@@ -29,7 +29,7 @@
             top: -28px;
             margin: 0;
 
-            @media only screen and (max-width: 600px) {
+            @media only screen and (max-width: 959px) {
                 right: 20px;
                 left: auto;
                 transform: none;
